--- a/assignment2/Model/model_cate.ipynb
+++ b/assignment2/Model/model_cate.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "psychological-shame",
+   "id": "tired-columbia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hidden-denmark",
+   "id": "passing-belfast",
    "metadata": {},
    "source": [
     "### Feature eng"
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 211,
-   "id": "spread-hopkins",
+   "id": "molecular-metro",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 155,
-   "id": "continent-exploration",
+   "id": "accompanied-temperature",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "shaped-chicken",
+   "id": "formal-hepatitis",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "accessible-flour",
+   "id": "loose-logging",
    "metadata": {},
    "source": [
     "### Data"
@@ -273,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "chemical-infrared",
+   "id": "promising-spencer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "identical-exercise",
+   "id": "entire-biotechnology",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "developed-tattoo",
+   "id": "coupled-german",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": 212,
-   "id": "mighty-wells",
+   "id": "hawaiian-trust",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": 213,
-   "id": "collaborative-swaziland",
+   "id": "classical-registration",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": 214,
-   "id": "under-geography",
+   "id": "diagnostic-deposit",
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "dress-spouse",
+   "id": "median-stack",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "breathing-granny",
+   "id": "front-hollow",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "continuing-square",
+   "id": "medium-burns",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "devoted-configuration",
+   "id": "significant-tampa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,14 +390,14 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "personal-biology",
+   "id": "cosmetic-spray",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "literary-fiber",
+   "id": "electric-journalism",
    "metadata": {},
    "source": [
     "### Parameter tuning"
@@ -406,7 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": 188,
-   "id": "negative-hammer",
+   "id": "eleven-decision",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": 165,
-   "id": "ignored-buffalo",
+   "id": "removable-medication",
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +510,7 @@
   {
    "cell_type": "code",
    "execution_count": 202,
-   "id": "homeless-grass",
+   "id": "cutting-emphasis",
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +575,7 @@
   {
    "cell_type": "code",
    "execution_count": 203,
-   "id": "biological-skill",
+   "id": "greatest-medicine",
    "metadata": {},
    "outputs": [
     {
@@ -622,14 +622,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "actual-burden",
+   "id": "pleasant-knife",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "casual-going",
+   "id": "synthetic-lawyer",
    "metadata": {},
    "source": [
     "### Model"
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": 208,
-   "id": "distinct-battlefield",
+   "id": "weekly-right",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -647,7 +647,7 @@
     "    # data\n",
     "    properties = testset['prop_id']\n",
     "    del testset['prop_id']\n",
-    "    del df['prop_id']\n",
+    "    \n",
     "\n",
     "    X_train = df.loc[:, ~df.columns.isin(['srch_id','score'])]\n",
     "    y_train = df.loc[:, df.columns.isin(['score'])]\n",
@@ -672,8 +672,7 @@
     "    model.fit(X_train, y_train, group=groups, verbose=True)\n",
     "    \n",
     "\n",
-    "    predictions = (testset.groupby('srch_id').apply(lambda x: predict(model, x)))    \n",
-    "    output = pd.DataFrame()\n",
+    "    predictions = (testset.groupby('srch_id').apply(lambda x: predict(model, x)))    output = pd.DataFrame()\n",
     "    output[\"srch_id\"] = test_data[\"srch_id\"]\n",
     "    output[\"prop_id\"] = properties\n",
     "\n",
@@ -695,7 +694,7 @@
   {
    "cell_type": "code",
    "execution_count": 209,
-   "id": "medieval-grave",
+   "id": "collectible-titanium",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -710,7 +709,7 @@
   {
    "cell_type": "code",
    "execution_count": 215,
-   "id": "entertaining-twenty",
+   "id": "roman-ribbon",
    "metadata": {},
    "outputs": [
     {
@@ -737,7 +736,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "literary-flashing",
+   "id": "drawn-forwarding",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -750,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "unlimited-aircraft",
+   "id": "liberal-communications",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -760,7 +759,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "checked-wheel",
+   "id": "bacterial-music",
    "metadata": {},
    "outputs": [
     {
@@ -803,7 +802,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "large-process",
+   "id": "practical-pointer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -814,7 +813,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "olive-transcript",
+   "id": "compatible-samba",
    "metadata": {},
    "outputs": [
     {
@@ -847,7 +846,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "coordinate-sussex",
+   "id": "ancient-placement",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -871,7 +870,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "aquatic-delicious",
+   "id": "charged-offering",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -881,7 +880,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "specific-insured",
+   "id": "animal-shame",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -891,7 +890,7 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "exceptional-limit",
+   "id": "signal-participation",
    "metadata": {},
    "outputs": [
     {
@@ -979,7 +978,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "intellectual-theory",
+   "id": "combined-welsh",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -989,7 +988,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "comic-conservation",
+   "id": "dental-change",
    "metadata": {},
    "outputs": [
     {
@@ -1022,7 +1021,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "turned-knowing",
+   "id": "golden-endorsement",
    "metadata": {},
    "outputs": [],
    "source": []
