--- a/assignment2/Model/Local_Model.ipynb
+++ b/assignment2/Model/Local_Model.ipynb
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,9 +296,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-2-b92790de89ba>:55: FutureWarning: weekofyear and week have been deprecated, please use DatetimeIndex.isocalendar().week instead, which returns a Series.  To exactly reproduce the behavior of week and weekofyear and return an Index, you may call pd.Int64Index(idx.isocalendar().week)\n",
+      "  df[\"week\"] = df_datetime.week\n"
+     ]
+    }
+   ],
    "source": [
     "# perform the feature engineering on the training data\n",
     "\n",
@@ -307,9 +316,223 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>srch_id</th>\n",
+       "      <th>site_id</th>\n",
+       "      <th>visitor_location_country_id</th>\n",
+       "      <th>prop_country_id</th>\n",
+       "      <th>prop_id</th>\n",
+       "      <th>prop_starrating</th>\n",
+       "      <th>prop_review_score</th>\n",
+       "      <th>prop_brand_bool</th>\n",
+       "      <th>prop_location_score1</th>\n",
+       "      <th>prop_location_score2</th>\n",
+       "      <th>...</th>\n",
+       "      <th>random_bool</th>\n",
+       "      <th>month</th>\n",
+       "      <th>week</th>\n",
+       "      <th>day</th>\n",
+       "      <th>hour</th>\n",
+       "      <th>prop_historical_price</th>\n",
+       "      <th>price_position</th>\n",
+       "      <th>click_bool_rate</th>\n",
+       "      <th>booking_bool_rate</th>\n",
+       "      <th>score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>12</td>\n",
+       "      <td>187</td>\n",
+       "      <td>219</td>\n",
+       "      <td>893</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.83</td>\n",
+       "      <td>0.0438</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>14</td>\n",
+       "      <td>4</td>\n",
+       "      <td>8</td>\n",
+       "      <td>141.174964</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.026144</td>\n",
+       "      <td>0.016340</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14076</th>\n",
+       "      <td>1</td>\n",
+       "      <td>12</td>\n",
+       "      <td>187</td>\n",
+       "      <td>219</td>\n",
+       "      <td>111106</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.69</td>\n",
+       "      <td>0.0071</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>14</td>\n",
+       "      <td>4</td>\n",
+       "      <td>8</td>\n",
+       "      <td>106.697742</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.017391</td>\n",
+       "      <td>0.008696</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13444</th>\n",
+       "      <td>1</td>\n",
+       "      <td>12</td>\n",
+       "      <td>187</td>\n",
+       "      <td>219</td>\n",
+       "      <td>111000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.20</td>\n",
+       "      <td>0.0164</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>14</td>\n",
+       "      <td>4</td>\n",
+       "      <td>8</td>\n",
+       "      <td>151.411304</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>0.023734</td>\n",
+       "      <td>0.015823</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12851</th>\n",
+       "      <td>1</td>\n",
+       "      <td>12</td>\n",
+       "      <td>187</td>\n",
+       "      <td>219</td>\n",
+       "      <td>107872</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.71</td>\n",
+       "      <td>0.0465</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>14</td>\n",
+       "      <td>4</td>\n",
+       "      <td>8</td>\n",
+       "      <td>84.774942</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.016863</td>\n",
+       "      <td>0.008432</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12321</th>\n",
+       "      <td>1</td>\n",
+       "      <td>12</td>\n",
+       "      <td>187</td>\n",
+       "      <td>219</td>\n",
+       "      <td>97247</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.83</td>\n",
+       "      <td>0.0145</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>14</td>\n",
+       "      <td>4</td>\n",
+       "      <td>8</td>\n",
+       "      <td>107.770073</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.022642</td>\n",
+       "      <td>0.011321</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 31 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       srch_id  site_id  visitor_location_country_id  prop_country_id  \\\n",
+       "0            1       12                          187              219   \n",
+       "14076        1       12                          187              219   \n",
+       "13444        1       12                          187              219   \n",
+       "12851        1       12                          187              219   \n",
+       "12321        1       12                          187              219   \n",
+       "\n",
+       "       prop_id  prop_starrating  prop_review_score  prop_brand_bool  \\\n",
+       "0          893                3                3.5                1   \n",
+       "14076   111106                3                2.5                1   \n",
+       "13444   111000                3                4.5                1   \n",
+       "12851   107872                2                3.5                1   \n",
+       "12321    97247                2                3.5                1   \n",
+       "\n",
+       "       prop_location_score1  prop_location_score2  ...  random_bool  month  \\\n",
+       "0                      2.83                0.0438  ...            1      4   \n",
+       "14076                  0.69                0.0071  ...            1      4   \n",
+       "13444                  2.20                0.0164  ...            1      4   \n",
+       "12851                  2.71                0.0465  ...            1      4   \n",
+       "12321                  2.83                0.0145  ...            1      4   \n",
+       "\n",
+       "       week  day  hour  prop_historical_price  price_position  \\\n",
+       "0        14    4     8             141.174964             3.0   \n",
+       "14076    14    4     8             106.697742             5.0   \n",
+       "13444    14    4     8             151.411304            16.0   \n",
+       "12851    14    4     8              84.774942             7.0   \n",
+       "12321    14    4     8             107.770073             4.0   \n",
+       "\n",
+       "       click_bool_rate  booking_bool_rate  score  \n",
+       "0             0.026144           0.016340      0  \n",
+       "14076         0.017391           0.008696      0  \n",
+       "13444         0.023734           0.015823      0  \n",
+       "12851         0.016863           0.008432      0  \n",
+       "12321         0.022642           0.011321      0  \n",
+       "\n",
+       "[5 rows x 31 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# check if everything is valid\n",
     "df.head()"
@@ -319,40 +542,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Categorical Values"
+    "#### Categorical, Important and Numerical Features"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "categorical = ['site_id', 'visitor_location_country_id', 'prop_country_id', 'day', 'hour', 'price_position', \n",
-    "               'prop_starrating', 'price_usd', 'prop_historical_price', 'booking_bool_rate', 'click_bool_rate']"
+    "               'prop_starrating', 'price_usd', 'prop_historical_price', 'booking_bool_rate', 'click_bool_rate', \n",
+    "               'srch_booking_window', 'day', 'hour', 'week', 'month']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# important features for xgb model also\n",
     "\n",
     "important = ['price_position', 'prop_starrating', 'price_usd', 'prop_historical_price', \n",
-    "             'booking_bool_rate', 'click_bool_rate']"
+    "             'booking_bool_rate', 'click_bool_rate', 'day', 'hour', 'week', 'month']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Resulting values\n",
+    "# Resulting features\n",
+    "\n",
     "numerical = list((set(df.columns) - set(categorical)) - set(['score', 'srch_id', 'position'])) + important\n",
     "numerical_test = list((set(df.columns) - set(categorical)) - set(['score', 'position'])) + important"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Random Forest boolean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# SET RF TRUE OR FALSE IF YOU WANT TO INCLUDE RANDOM FOREST \n",
+    "# Useful for dealing with specifically categorical variables\n",
+    "\n",
+    "RF = \"True\""
    ]
   },
   {
@@ -364,19 +608,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Only useful for experimenting\n",
     "# Take a sample of 50 percent of all data\n",
     "\n",
-    "subsample = 0.5\n",
+    "subsample = 1\n",
     "\n",
     "df = sample_on_srch_id(df, frac = subsample)\n",
     "del df['position']\n",
     "\n",
-    "# split sample in 80 percent training and 20 percent test by srch_id\n",
+    "# split sample in training- and test set by srch_id\n",
     "gss = GroupShuffleSplit(test_size=.52, n_splits=1, random_state = 7).split(df, groups=df['srch_id'])\n",
     "\n",
     "X_train_inds, X_test_inds = next(gss)"
@@ -384,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,14 +636,17 @@
     "\n",
     "# X_train and categorical X_train\n",
     "X_train = train_data.loc[:, ~train_data.columns.isin(['srch_id','score'])]\n",
-    "c_X_train = X_train[categorical]\n",
-    "X_train = X_train[numerical]\n",
+    "\n",
+    "if RF == \"True\":\n",
+    "    c_X_train = X_train[categorical]\n",
+    "    X_train = X_train[numerical]\n",
     "\n",
     "y_train = train_data.loc[:, train_data.columns.isin(['score'])]\n",
     "\n",
-    "# replace 5 by 1 to make it binary classification\n",
-    "c_y_train = pd.DataFrame()\n",
-    "c_y_train['score'] = y_train['score'].replace(5, 1)\n",
+    "if RF == \"True\":\n",
+    "    # replace 5 by 1 to make it binary classification\n",
+    "    c_y_train = pd.DataFrame()\n",
+    "    c_y_train['score'] = y_train['score'].replace(5, 1)\n",
     "\n",
     "del X_train['prop_id']\n",
     "\n",
@@ -409,14 +656,17 @@
     "\n",
     "# X_test and categorical X_test\n",
     "X_test = test_data.loc[:, ~test_data.columns.isin(['score'])]\n",
-    "c_X_test = X_test[categorical]\n",
-    "X_test = X_test[numerical_test]\n",
+    "\n",
+    "if RF == \"True\":\n",
+    "    c_X_test = X_test[categorical]\n",
+    "    X_test = X_test[numerical_test]\n",
     "\n",
     "y_test = test_data.loc[:, test_data.columns.isin(['score'])]\n",
     "\n",
-    "# replace 5 by 1 to make it binary classification\n",
-    "c_y_test = pd.DataFrame()\n",
-    "c_y_test['score'] = y_test['score'].replace(5, 1)\n",
+    "if RF == \"True\":\n",
+    "    # replace 5 by 1 to make it binary classification\n",
+    "    c_y_test = pd.DataFrame()\n",
+    "    c_y_test['score'] = y_test['score'].replace(5, 1)\n",
     "\n",
     "# delete prop_id\n",
     "test_properties = X_test[\"prop_id\"].copy()\n",
@@ -441,52 +691,29 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-12-cf14707fed2a>:4: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
+      "  clf.fit(c_X_train, c_y_train)\n"
+     ]
+    }
+   ],
    "source": [
     "# Using sklearn randomforest, train model with solely categorical features\n",
+    "if RF == \"True\":\n",
+    "    clf = RandomForestClassifier(n_estimators=45)\n",
+    "    clf.fit(c_X_train, c_y_train)\n",
+    "    y_pred_bool = clf.predict(c_X_test)\n",
     "\n",
-    "clf = RandomForestClassifier(n_estimators=50)\n",
-    "clf.fit(c_X_train, c_y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_pred_bool = clf.predict(c_X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Confusion matrix\n",
+    "    print(pd.crosstab(np.array(c_y_test).reshape(len(c_y_test,)), y_pred_bool))\n",
     "\n",
-    "print(pd.crosstab(np.array(c_y_test).reshape(len(c_y_test,)), y_pred_bool))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_pred = clf.predict_proba(c_X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Predicted probabilities\n",
+    "    y_pred = clf.predict_proba(c_X_test)\n",
     "\n",
-    "pp = [item[1] for item in y_pred]"
+    "    # Predicted probabilities\n",
+    "    pp = [item[1] for item in y_pred]"
    ]
   },
   {
@@ -507,11 +734,11 @@
     "    booster='gbtree',\n",
     "    objective='rank:pairwise',\n",
     "    random_state=42, \n",
-    "    learning_rate=0.05,\n",
+    "    learning_rate=0.3,\n",
     "    colsample_bytree=0.9, \n",
     "    eta=0.05, \n",
     "    max_depth=6, \n",
-    "    n_estimators=110, \n",
+    "    n_estimators=150, \n",
     "    subsample=0.75,\n",
     "    )\n",
     "\n",
@@ -593,7 +820,12 @@
     "    for j in i:\n",
     "        pred_scores_list.append(j)\n",
     "\n",
-    "output[\"pred_scores\"] = [x + y for x, y in zip(pred_scores_list, pp)]"
+    "# Weight of RF model\n",
+    "weigth = 0.5\n",
+    "if RF == \"True\":\n",
+    "    output[\"pred_scores\"] = [x + weigth*y for x, y in zip(pred_scores_list, pp)]\n",
+    "else:\n",
+    "    output[\"pred_scores\"] = pred_scores_list"
    ]
   },
   {
