--- a/assignment2/Model/model_cate.ipynb
+++ b/assignment2/Model/model_cate.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "id": "aware-documentary",
+   "execution_count": 1,
+   "id": "mexican-pearl",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fuzzy-samba",
+   "id": "blocked-evening",
    "metadata": {},
    "source": [
     "### Feature eng"
@@ -26,8 +26,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
-   "id": "lesser-collectible",
+   "execution_count": 2,
+   "id": "lonely-basics",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,8 +215,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
-   "id": "focal-exposure",
+   "execution_count": 3,
+   "id": "distributed-rider",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,8 +253,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "challenging-hometown",
+   "execution_count": 4,
+   "id": "unlikely-thanksgiving",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cloudy-baghdad",
+   "id": "enabling-irish",
    "metadata": {},
    "source": [
     "### Data"
@@ -273,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "interim-handling",
+   "id": "downtown-russian",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "precious-naples",
+   "id": "choice-demand",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "nonprofit-battery",
+   "id": "minor-yukon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": 212,
-   "id": "comfortable-richardson",
+   "id": "proper-attendance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": 213,
-   "id": "union-bronze",
+   "id": "exclusive-advocate",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": 214,
-   "id": "august-digit",
+   "id": "radical-hayes",
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "starting-binding",
+   "id": "reasonable-mistake",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "apart-clearance",
+   "id": "optical-storm",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fallen-twins",
+   "id": "environmental-latitude",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "considerable-classification",
+   "id": "afraid-brief",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,14 +390,14 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "weird-convention",
+   "id": "occasional-canon",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "opening-mumbai",
+   "id": "conditional-taylor",
    "metadata": {},
    "source": [
     "### Parameter tuning"
@@ -406,7 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": 188,
-   "id": "critical-ordering",
+   "id": "vital-cowboy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": 165,
-   "id": "fabulous-turning",
+   "id": "instant-thickness",
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +510,7 @@
   {
    "cell_type": "code",
    "execution_count": 202,
-   "id": "reserved-london",
+   "id": "fatty-heaven",
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +575,7 @@
   {
    "cell_type": "code",
    "execution_count": 203,
-   "id": "super-appointment",
+   "id": "cordless-spray",
    "metadata": {},
    "outputs": [
     {
@@ -621,15 +621,187 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "polished-understanding",
+   "execution_count": 6,
+   "id": "imposed-texture",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>learning_rate</th>\n",
+       "      <th>max_depth</th>\n",
+       "      <th>n_estimators</th>\n",
+       "      <th>objective</th>\n",
+       "      <th>NDCG</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.050</td>\n",
+       "      <td>6</td>\n",
+       "      <td>500</td>\n",
+       "      <td>rank:pairwise</td>\n",
+       "      <td>0.435339</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.050</td>\n",
+       "      <td>6</td>\n",
+       "      <td>300</td>\n",
+       "      <td>rank:pairwise</td>\n",
+       "      <td>0.433845</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.050</td>\n",
+       "      <td>6</td>\n",
+       "      <td>500</td>\n",
+       "      <td>rank:ndcg</td>\n",
+       "      <td>0.433500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.025</td>\n",
+       "      <td>6</td>\n",
+       "      <td>500</td>\n",
+       "      <td>rank:pairwise</td>\n",
+       "      <td>0.431737</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.100</td>\n",
+       "      <td>6</td>\n",
+       "      <td>300</td>\n",
+       "      <td>rank:pairwise</td>\n",
+       "      <td>0.431419</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>625</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.400</td>\n",
+       "      <td>12</td>\n",
+       "      <td>150</td>\n",
+       "      <td>rank:map</td>\n",
+       "      <td>0.359689</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>626</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.400</td>\n",
+       "      <td>15</td>\n",
+       "      <td>110</td>\n",
+       "      <td>rank:pairwise</td>\n",
+       "      <td>0.358660</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>627</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.400</td>\n",
+       "      <td>12</td>\n",
+       "      <td>150</td>\n",
+       "      <td>rank:pairwise</td>\n",
+       "      <td>0.358505</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>628</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.400</td>\n",
+       "      <td>12</td>\n",
+       "      <td>110</td>\n",
+       "      <td>rank:map</td>\n",
+       "      <td>0.358086</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>629</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.400</td>\n",
+       "      <td>12</td>\n",
+       "      <td>110</td>\n",
+       "      <td>rank:pairwise</td>\n",
+       "      <td>0.355074</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>630 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Unnamed: 0  learning_rate  max_depth  n_estimators      objective  \\\n",
+       "0             0          0.050          6           500  rank:pairwise   \n",
+       "1             0          0.050          6           300  rank:pairwise   \n",
+       "2             0          0.050          6           500      rank:ndcg   \n",
+       "3             0          0.025          6           500  rank:pairwise   \n",
+       "4             0          0.100          6           300  rank:pairwise   \n",
+       "..          ...            ...        ...           ...            ...   \n",
+       "625           0          0.400         12           150       rank:map   \n",
+       "626           0          0.400         15           110  rank:pairwise   \n",
+       "627           0          0.400         12           150  rank:pairwise   \n",
+       "628           0          0.400         12           110       rank:map   \n",
+       "629           0          0.400         12           110  rank:pairwise   \n",
+       "\n",
+       "         NDCG  \n",
+       "0    0.435339  \n",
+       "1    0.433845  \n",
+       "2    0.433500  \n",
+       "3    0.431737  \n",
+       "4    0.431419  \n",
+       "..        ...  \n",
+       "625  0.359689  \n",
+       "626  0.358660  \n",
+       "627  0.358505  \n",
+       "628  0.358086  \n",
+       "629  0.355074  \n",
+       "\n",
+       "[630 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tuning = pd.read_csv(\"tuning/tuning_results.csv\")\n",
+    "tuning"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "resident-vintage",
+   "id": "deluxe-scottish",
    "metadata": {},
    "source": [
     "### Model"
@@ -638,7 +810,7 @@
   {
    "cell_type": "code",
    "execution_count": 208,
-   "id": "optimum-digest",
+   "id": "finnish-platinum",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": 209,
-   "id": "satellite-affect",
+   "id": "naughty-radar",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -709,7 +881,7 @@
   {
    "cell_type": "code",
    "execution_count": 215,
-   "id": "mature-kuwait",
+   "id": "cardiovascular-martial",
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +908,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "ambient-egypt",
+   "id": "short-gazette",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,7 +921,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "studied-layout",
+   "id": "sapphire-solomon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -759,7 +931,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "ongoing-screening",
+   "id": "numeric-round",
    "metadata": {},
    "outputs": [
     {
@@ -802,7 +974,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "adjusted-gross",
+   "id": "going-merchandise",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -813,7 +985,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "other-significance",
+   "id": "voluntary-vision",
    "metadata": {},
    "outputs": [
     {
@@ -846,7 +1018,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "chinese-headquarters",
+   "id": "sporting-clear",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -870,7 +1042,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "legendary-plate",
+   "id": "incorporated-transportation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -880,7 +1052,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "graphic-philippines",
+   "id": "satisfactory-religious",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -890,7 +1062,7 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "fifty-minute",
+   "id": "neutral-basket",
    "metadata": {},
    "outputs": [
     {
@@ -978,7 +1150,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "usual-fireplace",
+   "id": "described-shepherd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -988,7 +1160,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "thousand-mobile",
+   "id": "confidential-addiction",
    "metadata": {},
    "outputs": [
     {
@@ -1021,7 +1193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "mature-armenia",
+   "id": "instant-contract",
    "metadata": {},
    "outputs": [],
    "source": []
