--- a/assignment2/Model/model_iggy.ipynb
+++ b/assignment2/Model/model_iggy.ipynb
@@ -12,10 +12,10 @@
         "from sklearn.model_selection import GroupShuffleSplit"
       ],
       "outputs": [],
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "gather": {
-          "logged": 1621274058629
+          "logged": 1621276318267
         }
       },
       "id": "tired-columbia"
@@ -156,7 +156,7 @@
         "    #subset comp_rate\n",
         "    comp_rate_cols = [col for col in df.columns if col.endswith(\"_rate\")]\n",
         "    df[\"comp_rate_mode\"] = df[comp_rate_cols].mode(axis = 1, dropna = True)[0]\n",
-        "    df_sample[\"comp_rate_mode\"].fillna(fillna_ , inplace = True)\n",
+        "    df[\"comp_rate_mode\"].fillna(fillna_ , inplace = True)\n",
         "\n",
         "def create_comp_inv_mode(df, fillna_ = -100):\n",
         "    \"\"\"\n",
@@ -279,10 +279,10 @@
         "    \n"
       ],
       "outputs": [],
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "gather": {
-          "logged": 1621274062230
+          "logged": 1621276321410
         }
       },
       "id": "molecular-metro"
@@ -321,10 +321,10 @@
         "    return joined[\"NDCG\"].mean()"
       ],
       "outputs": [],
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {
         "gather": {
-          "logged": 1621274069801
+          "logged": 1621276327994
         }
       },
       "id": "accompanied-temperature"
@@ -336,10 +336,10 @@
         "    return model.predict(df.loc[:, ~df.columns.isin(['srch_id'])])"
       ],
       "outputs": [],
-      "execution_count": 5,
+      "execution_count": 4,
       "metadata": {
         "gather": {
-          "logged": 1621274072979
+          "logged": 1621276331319
         }
       },
       "id": "formal-hepatitis"
@@ -361,10 +361,10 @@
         "from sklearn.model_selection import GroupShuffleSplit"
       ],
       "outputs": [],
-      "execution_count": 6,
+      "execution_count": 5,
       "metadata": {
         "gather": {
-          "logged": 1621274075796
+          "logged": 1621276333612
         }
       },
       "id": "promising-spencer"
@@ -389,10 +389,10 @@
         "df_train = read_file(\"training_set_VU_DM.csv\")"
       ],
       "outputs": [],
-      "execution_count": 7,
+      "execution_count": 6,
       "metadata": {
         "gather": {
-          "logged": 1621274110956
+          "logged": 1621276371699
         }
       },
       "id": "coupled-german"
@@ -433,7 +433,7 @@
         "#testset = feature_engineering_test(d1_test)"
       ],
       "outputs": [],
-      "execution_count": 8,
+      "execution_count": 7,
       "metadata": {
         "gather": {
           "logged": 1621166950607
