--- a/assignment2/Model/model_iggy.ipynb
+++ b/assignment2/Model/model_iggy.ipynb
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "entire-biotechnology",
    "metadata": {
     "gather": {
@@ -410,48 +410,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65fde201-8820-40d0-bc10-93bcb280c150",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_train = pd.read_csv('/Users/IggyMac/OneDrive - UvA/2020-2021/Data mining/Github/assignment2/Model/engineered_training_data.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
    "id": "9800d5aa-985c-4c33-bca6-8b379fdfbb80",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['srch_id', 'date_time', 'site_id', 'visitor_location_country_id',\n",
-       "       'visitor_hist_starrating', 'visitor_hist_adr_usd', 'prop_country_id',\n",
-       "       'prop_id', 'prop_starrating', 'prop_review_score', 'prop_brand_bool',\n",
-       "       'prop_location_score1', 'prop_location_score2',\n",
-       "       'prop_log_historical_price', 'position', 'price_usd', 'promotion_flag',\n",
-       "       'srch_destination_id', 'srch_length_of_stay', 'srch_booking_window',\n",
-       "       'srch_adults_count', 'srch_children_count', 'srch_room_count',\n",
-       "       'srch_saturday_night_bool', 'srch_query_affinity_score',\n",
-       "       'orig_destination_distance', 'random_bool', 'comp1_rate', 'comp1_inv',\n",
-       "       'comp1_rate_percent_diff', 'comp2_rate', 'comp2_inv',\n",
-       "       'comp2_rate_percent_diff', 'comp3_rate', 'comp3_inv',\n",
-       "       'comp3_rate_percent_diff', 'comp4_rate', 'comp4_inv',\n",
-       "       'comp4_rate_percent_diff', 'comp5_rate', 'comp5_inv',\n",
-       "       'comp5_rate_percent_diff', 'comp6_rate', 'comp6_inv',\n",
-       "       'comp6_rate_percent_diff', 'comp7_rate', 'comp7_inv',\n",
-       "       'comp7_rate_percent_diff', 'comp8_rate', 'comp8_inv',\n",
-       "       'comp8_rate_percent_diff', 'click_bool', 'gross_bookings_usd',\n",
-       "       'booking_bool'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_train.columns"
    ]
@@ -486,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "diagnostic-deposit",
    "metadata": {
     "gather": {
@@ -504,14 +465,33 @@
     }
    ],
    "source": [
-    "df = feature_engineering_train(df_train)\n",
+    "df_train = feature_engineering_train(df_train)\n",
     "#df_2 = feature_engineering_train(d1_train)\n",
     "#testset = feature_engineering_test(d1_test) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
+   "id": "3be32351-1e3a-444e-8767-466daccd79a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-2-755bbca02b0d>:55: FutureWarning: weekofyear and week have been deprecated, please use DatetimeIndex.isocalendar().week instead, which returns a Series.  To exactly reproduce the behavior of week and weekofyear and return an Index, you may call pd.Int64Index(idx.isocalendar().week)\n",
+      "  df[\"week\"] = df_datetime.week\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_test = feature_engineering_test(df_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "1a7b24e2-bc03-4fa9-b9e8-daa658c4c797",
    "metadata": {
     "nteract": {
@@ -523,7 +503,27 @@
    },
    "outputs": [],
    "source": [
-    "df.to_csv(\"engineered_training_data.csv\", index = False)"
+    "df_train.to_csv(\"engineered_training_data.csv\", index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "7ba6c495-7b2b-4220-bda7-693490312925",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del df_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "5960f930-1301-4334-8064-ed3a54e1de36",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_test.to_csv(\"engineered_test_data.csv\", index = False)"
    ]
   },
   {
