create_comp_rate_precent_mean

--- a/assignment2/Model/model_iggy.ipynb
+++ b/assignment2/Model/model_iggy.ipynb
@@ -173,6 +173,14 @@
     "    comp_inv = [col for col in df.columns if col.endswith(\"_inv\")]\n",
     "    df[\"comp_inv_mode\"] = df[comp_inv].mode(axis = 1, dropna = True)[0]\n",
     "    df[\"comp_inv_mode\"].fillna(fillna_ , inplace = True)\n",
+    "    \n",
+    "def create_comp_rate_precent_mean(df, fillna_ = -100):\n",
+    "    \"\"\"\n",
+    "    creates a column with the mean of comp_rate_precent columns and fills the rest with -100 (default)\n",
+    "    \"\"\"\n",
+    "    comp_rate_precent = [col for col in df.columns if col.endswith(\"_rate_percent_diff\")]\n",
+    "    df[\"comp_rate_precent_mean\"] = df[comp_rate_precent].mean(axis = 1, dropna = True)[0]\n",
+    "    #df[\"comp_rate_precent_mean\"].fillna(fillna_ , inplace = True)    \n",
     "\n",
     "def normalize_features(df_mod, normalizing_var, column):\n",
     "    # df_mod = dataframe\n",
