--- a/assignment2/Model/model_iggy.ipynb
+++ b/assignment2/Model/model_iggy.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "molecular-metro",
    "metadata": {
     "gather": {
@@ -176,11 +176,12 @@
     "    \n",
     "def create_comp_rate_precent_mean(df, fillna_ = -100):\n",
     "    \"\"\"\n",
-    "    creates a column with the mean of comp_rate_precent columns and fills the rest with -100 (default)\n",
+    "    creates a column with the mean of comp_rate_precent columns\n",
     "    \"\"\"\n",
     "    comp_rate_precent = [col for col in df.columns if col.endswith(\"_rate_percent_diff\")]\n",
-    "    df[\"comp_rate_precent_mean\"] = df[comp_rate_precent].mean(axis = 1, dropna = True)[0]\n",
-    "    #df[\"comp_rate_precent_mean\"].fillna(fillna_ , inplace = True)    \n",
+    "    df[\"comp_rate_precent_mean\"] = df[comp_rate_precent].mean(axis = 1, skipna = True)[0]\n",
+    "    #df[\"comp_rate_precent_mean\"].fillna(fillna_ , inplace = True)   \n",
+    "    return df[[\"srch_id\", \"prop_id\", \"comp_rate_precent_mean\"]]\n",
     "\n",
     "def normalize_features(df_mod, normalizing_var, column):\n",
     "    # df_mod = dataframe\n",
@@ -297,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "accompanied-temperature",
    "metadata": {
     "gather": {
@@ -389,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "entire-biotechnology",
    "metadata": {
     "gather": {
@@ -417,12 +418,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "9800d5aa-985c-4c33-bca6-8b379fdfbb80",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_train.columns"
+    "df_test = create_comp_rate_precent_mean(df_test)"
    ]
   },
   {
